# DeFi-Risk-Auditor-Agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
hardhat/: hardhat.config.ts  package-lock.json  package.json
hardhat/contracts/: Counter.t.sol  FlashLoanPool.sol  OracleManipulation.sol  ReentrancyVault.sol
src/: agent.py  server.py
src/contracts/: simulator.py
src/sponsor_integrations/: lambda_compute.py  nebius_inference.py  snowflake_db.py
